# Second-LAB-OC

./: CMakeLists.txt  CMakeProject1.cpp  lab2_functions.cpp  lab2_functions.h  test_main.cpp
